RESOLVED FIXED85358
ARM_TRADITIONAL build errors
https://bugs.webkit.org/show_bug.cgi?id=85358
Summary ARM_TRADITIONAL build errors
Hojong Han
Reported 2012-05-02 02:32:27 PDT
no matching function for calls below in MacroAssembler.h JSC::MacroAssembler::or32(const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&) JSC::MacroAssembler::xor32(JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&) JSC::MacroAssembler::xor32(const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&) JSC::MacroAssembler::branchSub32(JSC::MacroAssemblerARM::ResultCondition&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&) JSC::MacroAssembler::lshift32(JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&) JSC::MacroAssembler::urshift32(JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&)
Attachments
Patch (3.36 KB, patch)
2012-05-02 03:08 PDT, Hojong Han
no flags
Hojong Han
Comment 1 2012-05-02 03:08:30 PDT
WebKit Review Bot
Comment 2 2012-05-02 19:15:05 PDT
Comment on attachment 139780 [details] Patch Clearing flags on attachment: 139780 Committed r115929: <http://trac.webkit.org/changeset/115929>
WebKit Review Bot
Comment 3 2012-05-02 19:15:11 PDT
All reviewed patches have been landed. Closing bug.
Patrick R. Gansterer
Comment 4 2012-05-30 08:12:01 PDT
*** Bug 84584 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.