ARM_TRADITIONAL build fix https://bugs.webkit.org/show_bug.cgi?id=85358

Patch by Hojong Han <hojong.han@samsung.com> on 2012-05-02
Reviewed by Gavin Barraclough.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::lshift32):
(MacroAssemblerARM):
(JSC::MacroAssemblerARM::or32):
(JSC::MacroAssemblerARM::urshift32):
(JSC::MacroAssemblerARM::xor32):
(JSC::MacroAssemblerARM::branchSub32):

Canonical link: https://commits.webkit.org/103003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115929 268f45cc-cd09-0410-ab3c-d52691b4dbfc